# rust-tui

./: .gitignore  Cargo.toml  README.md  bookmark.json
.github/workflows/: build.yaml
src/: app.rs  main.rs
src/app/: app.rs  bookmark.rs  mod.rs  virtualbox.rs
src/app/bookmark/: bookmark.rs  form.rs  mod.rs
src/app/google/: authentication.rs  mod.rs
src/app/google/calendar/: calendar.rs  keybind.rs  mod.rs  ui.rs
src/app/schedule/: form.rs  mod.rs  schedule.rs
src/app/task/: form.rs  mod.rs  task.rs
src/app/ui/: checkbox.rs  help.rs  input.rs  mod.rs  pane.rs  popup.rs  select_list.rs
src/app/virtualbox/: mod.rs  virtualbox.rs
